--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^10.0.3",
     "@testing-library/user-event": "^10.0.2",
     "axios": "^0.19.2",
+    "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
@@ -17,6 +18,7 @@
     "react-transition-group": "^4.3.0"
   },
   "scripts": {
+    "heroku": "node src/server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
